--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["http"],
     "require": {
         "php": ">=5.3.23",
-        "vda/util": "0.11.*"
+        "vda/util": "0.11.*|0.12.*"
     },
     "suggest": {
         "ext-xmlrpc": "Needed for XmlrpcClient"
